Truncate text for table cell fixed

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -44,6 +44,9 @@
 .mb-3 {
     margin-bottom: 3rem;
 }
+td.truncate {
+    display: table-cell;
+}
 @media (max-width: 700px) {
     .truncate {
         max-width: 250px;
